# jaxon

./: .gitignore  AGENTS.md  README.md  llms.txt  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/jaxon/: __init__.py  _common.py  _load.py  _save.py
src/jaxon/v1_2_0/: _common.py  _load.py  _save.py
tests/: roundtrip_tests.py  test_api.py  test_data_complete.py  test_dill.py  test_fuzzing.py  test_tree_equal.py  test_util.py  tests.py
tests/testing/: classes.py  data.py  fuzz.py  tree_equal.py
