[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jaxon"
version = "1.2.0"
description = "HDF5 serialization for JAX and NumPy pytrees with full type fidelity and reference identity"
authors = [{ name = "Frank Hermann", email = "frank.c.hermann@googlemail.com" }]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed",
]
license-files = ["LICENSE"]
keywords = [
    "JAX", "NumPy", "HDF5", "serialization", "pytree",
    "machine-learning", "scientific-computing", "Equinox", "dataclass",
]
dependencies = ["numpy", "jax", "h5py", "dill"]

[project.urls]
Homepage = "https://github.com/42Ar/jaxon"
Repository = "https://github.com/42Ar/jaxon"
Issues = "https://github.com/42Ar/jaxon/issues"

[tool.setuptools.packages.find]
where = ["src"]
